@@ -3,6 +3,8 @@ Changelog
 
 5.2-dev - (unreleased)
 ----------------------
+* Bug fix: removed patch for Products.MaildropHost
+  [tiberich #5382]
 * Bug fix: remove entry point to symlink maildrop
   [tiberich refs #5382]
 * Bug fix: remove patch for TinyMce's getContentType, no longer needed
